# pfm

./: .dockerignore  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PROJECT_STATUS.md  README.md  docker-compose.demo.yml  docker-compose.yml  init.sql  portf  portf_completion.bash  portf_completion.zsh  pyproject.toml  pytest.ini  settings.toml  setup_portf_cli.sh  start_server.py
.github/workflows/: ci.yml  docker-build-push.yml
docs/: API_CLIENT_README.md  API_KEY_AUTHENTICATION.md  BACKUP.md  CLI_SETUP_README.md  CONFIGURATION.md  CSV_EXPORT_README.md  DATABASE_ABSTRACTION_README.md  DEMO_ACCOUNT_README.md  DOCKER_CI_CD.md  EXTERNAL_ACCESS.md  GOOGLE_SHEETS_EXPORT_README.md  MIGRATION_GUIDE.md  POSTGRESQL_SETUP.md  README.md  ROADMAP.md  TESTING.md  TRANSACTION_FILTERING_README.md  TRANSACTION_MANAGEMENT.md  new_endpoints.md  web-ui-patterns.md
docs/api-specification/: api-flow-diagrams.md  authentication-guide.md  data-model-erd.md  implementation-guidelines.md  portfolio-management-api.md  web-app-architecture.md  wireframe-specifications.md
docs/design/: import_llm.md
mcp/: README.md  server.py
portf_manager/: __init__.py  __main__.py  api_client.py  auth.py  cache.py  calculator.py  cli.py  config.py  csv_export.py  currency_utils.py  database.py  database_factory.py  database_pg.py  error_handling.py  gemini_client.py  google_sheets_export.py  http_client.py  llm_client.py  llm_types.py  market.py  models.py  models_sqlalchemy.py  multi_agent_integration.py  platform_export.py  portfolio_aware_agent.py  portfolio_snapshot.py  positions.py  push_notifications.py  readline_support.py  sectors.py  stock_report.py  tax_calculator.py  tax_export.py  ticker_resolver.py  transaction_filter.py
portf_manager/parsers/: __init__.py  bookings_csv_parser.py  coinbase_csv_parser.py  deposits_csv_parser.py  utils.py  (+7 more)
portf_server/: README.md  __init__.py  api_key_cli.py  app.py  auth_middleware.py  chat_tools.py  dependencies.py  settings.py
scripts/: backfill_tickers.py  create_api_key.py  create_demo_account.py  deploy-prod.sh  fix_database_dates.sql  fix_f541.py  import_indexacapital.py  inspect_db.py  portf-backup.sh  repair_database.py  schema_check.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_client_unit.py  test_auth.py  test_cli.py  test_cli_update_prices.py  test_coinbase_parser.py  test_console.py  test_csv_export.py  test_database.py  test_gemini_client.py  test_google_sheets_export.py  test_mintos_parser.py  test_myinvestor_parser.py  test_parser_utils.py  test_pdt_sheets_sync.py  test_pdt_xlsx_parser.py  test_portfolio_snapshot.py  test_tax_calculator.py  test_tax_export.py
web_client/: .dockerignore  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-build.sh  index.html  manifest.json  nginx.conf  nginx.demo.conf  public.html  sw.js  test_setup.py
(+127 files in other folders)
