[project]
name = "pfm"
version = "0.1.0"
description = "Portfolio tracker CLI + FastAPI server for stocks, ETFs, and P2P investments"
requires-python = ">=3.13"
dependencies = [
    "click",
    "pandas",
    "yfinance",
    "requests",
    "scipy",
    "numpy",
    "google-generativeai",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary",
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "asyncpg",
    "httpx",
    "python-dotenv",
    "pydantic-settings",
    "pydantic[email]",
    "python-multipart",
    "reportlab",
    "openpyxl>=3.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "black==25.1.0",
    "pytest",
    "pre-commit",
    "pytest-asyncio",
    "pytest-httpx",
    "playwright",
    "pytest-playwright",
    "pytest-mock",
    "pytest-cov",
    "pytest-xvfb",
    "flake8>=7.3.0",
    "ruff",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Mirror the existing flake8 config (pyflakes + pycodestyle) so adopting ruff
# doesn't churn the codebase. W503 has no ruff equivalent; E501 (line length)
# is left to black. E402 is ignored to match flake8's exemptions for the
# import-after-fallback blocks in cli.py / portfolio_aware_agent.py. Broaden
# the selection in follow-up work.
select = ["E", "F", "W"]
ignore = ["E203", "E402", "E501"]

[tool.mypy]
python_version = "3.13"
# Report-only adoption: types are hinted but not yet enforced everywhere, so
# keep mypy non-blocking (run locally / informationally) until the backlog is
# cleared. Not wired into CI as a gating step yet.
ignore_missing_imports = true
warn_unused_ignores = true
